--- a/gemfile
+++ b/gemfile
@@ -7,6 +7,8 @@ gem 'rails', '3.2.6'
 
 group :development do
 gem 'sqlite3', '1.3.5'
+gem 'rspec-rails', '2.10.0'
+gem 'guard-rspec', '0.5.5'
 end
 
 # Gems used only for assets and not required
@@ -25,7 +27,11 @@ gem 'jquery-rails', '2.0.0'
 
 group :test do
  gem 'capybara', '1.1.2'
- gem 'rspec-rails', '2.10.0'
+ gem 'rb-fsevent', '0.9.1', :require => false
+ gem 'growl', '1.0.3'
+ gem 'guard-spork', '0.3.2'
+ gem 'spork', '0.9.0'
+
 end
 
 group :production do
